# Graphics-TinyRenderer

./: .gitignore  CMakeLists.txt  README.md  color.h  geometry.cpp  geometry.h  main.cpp  model.cpp  model.h  renderer.cpp  renderer.h  shader.h  texture.h  tga-handler.cpp  tga-handler.h  tgahandler.cpp  tgahandler.h  tgaimage.cpp  tgaimage.h
doc/: README_CN.md  TinyRenderer.puml  class_diagram.puml
image/: african_head_gouraud_shader.tga  african_head_simple_texture_shader.tga  african_head_static_layer_value_shader.tga  african_head_tangent_shader.tga  boggie.tga  diablo3_tangent_shader.tga  output.tga  output2.tga
